--- a/mystyle.css
+++ b/mystyle.css
@@ -19,14 +19,17 @@ body{
 }
 
 #register{
+    
     width: 350px;
     height: 500px;
+    position: relative;
     opacity: .6;
-    border: 1px solid white;
-    border-radius: 5px;
-    margin-top: 50px;
+    top: 50%;
+    transform: translateY(-50%);
     margin-left: auto;
-    margin-right: auto;
-    
+    margin-right:  auto;
+    border: 1px solid white;
     background-color: black;
+    border-radius: 5px;
 }
+
