--- a/mystyle.css
+++ b/mystyle.css
@@ -2,6 +2,7 @@ body, html{
     margin: 0px;
     padding: 0px;
     height: 100%;
+    font-family: Tahoma, sans-serif;
 }
 
 body{
@@ -19,14 +20,15 @@ body{
 }
 
 #register{
-    width: 350px;
-    height: 500px;
+    width: 310px;
+    height: 460px;
     opacity: .6;
     border: 1px solid white;
     border-radius: 5px;
     margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
+    padding: 20px 20px 20px 20px;
     
     background-color: black;
 }
