--- a/mystyle.css
+++ b/mystyle.css
@@ -3,6 +3,7 @@ body, html{
     padding: 0px;
     height: 100%;
     font-family: Tahoma, sans-serif;
+    color: white;
 }
 
 body{
@@ -10,6 +11,14 @@ body{
     background-size: 100% 100%;
     min-height: 100%;
     width: 100%;
+}
+
+.logo{
+    width: 240px;
+    height: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    background-image: url("Images/logo.png");
 }
 
 #container{
@@ -23,14 +32,13 @@ body{
     width: 310px;
     height: 460px;
     position: relative;
-    opacity: .6;
     top: 50%;
     transform: translateY(-50%);
     margin-left: auto;
     margin-right: auto;
     padding: 20px 20px 20px 20px;
     border: 1px solid white;
-    background-color: black;
+    background-color: rgba(0,0,0,0.6);
     border-radius: 5px;
 }
 
