--- a/mystyle.css
+++ b/mystyle.css
@@ -85,11 +85,12 @@ body{
 
 .btnLogin
 {
-    width: 180px;
+    width: 150px;
     display: block;
     font-size: 14px;
     margin-bottom: auto;
     margin-left: auto;
+    margin-right: auto;
 }
 
 .btn-large-primary, .btn-large-primary:visited {
@@ -154,6 +155,11 @@ body{
     width: 500px;
     margin: 0 auto; 
     height: 50px;
+}
+
+.atr{
+    display: inline-block;
+    font-size: 85%;
 }
 
 #game
