--- a/mystyle.css
+++ b/mystyle.css
@@ -9,6 +9,8 @@ body, html{
 body{
     background-image: url("Images/bg.jpg");
     background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     min-height: 100%;
     width: 100%;
 }
@@ -156,7 +158,7 @@ body{
     height: 50px;
 }
 
-#game
+/*#game
 {
     width: 70%;
     height: 40%;    
@@ -167,6 +169,32 @@ body{
     border-left: 1px solid white;
     border-right: 1px solid white;
     margin: 100px auto; 
+}*/
+
+/*
+ *      TESTE IMPLEMENTAÇÃO DO 
+ *      ESTILO DO CONTENT GAME
+ */
+
+#game
+{
+    background-image: url("Images/frame-center.png");
+    background-repeat: repeat-y;
+    background-position: 50% 0px;
+    height: 40%;
+    position: relative;
+    width: 980px;
+    /*margin: -121px auto -116px;*/
+    padding: 20px;
+    min-height: 350px;
+    margin: 100px auto;
+}
+
+#game-top
+{
+    background: url("Images/frame-textures-sprite.jpg") no-repeat scroll 50% 0px transparent;
+    display: none;
+    width: 100%;
 }
 
 label {
